Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81676

q3dbars.html#addSeries '/sa' not rendered to "See Also"

XMLWordPrintable

    • 1
    • 0b6024b853da4122a427d1edd1e009d175b1b80a (qt/qtdatavis3d/5.14)
    • DaVinci sprint 2

      In https://doc.qt.io/qt-5/q3dbars.html#addSeries,: /sa seriesList(), primarySeries

      '/sa' should be "See Also"

      html source code: <p>/sa <a href="q3dbars.html#seriesList">seriesList</a>

      change to:     <p>See Also <a href="q3dbars.html#seriesList">seriesList</a>

       

       

       

        For Gerrit Dashboard: QTBUG-81676
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            psnarf Henry Pfeil
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes