Doc: Fix typo in qdoc command

Fixes: QTBUG-81676
Change-Id: Ibe7f73e1fc529411ca92d7bdbb2ad8824cb97a62
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>